# dysarthia-classifier

./: .gitignore  README.md  data_with_path.csv  main.py  model.h5  notebook.html  notebook.ipynb  pyproject.toml
